rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-023a362b6af4219b.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libmissing_argument_rs-023a362b6af4219b.rmeta: missing-argument.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-023a362b6af4219b.d: missing-argument.rs Cargo.toml

missing-argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
